# gazprom_hack

./: .gitignore  CMakeLists.txt  Project.cbp  README.md  client.cpp  gazprom_hack_backend.cbp  package-lock.json  package.json  server.cpp
backend/: README.md  client.py  generate.py  requirements.txt  server.py
frontend/: README.md  package.json
frontend/src/: App.js  db.json  styles.css
frontend/src/components/: Auth.js  ClientForm.js  ClientPage.js
frontend/src/data/: sampleImages.js
include/: database_manager.h  http_server.h
new/: README.md  package-lock.json
new/public/images/: README.md
new/src/: App.js  README.md  styles.css  theme.js
new/src/components/: Auth.js  ClientForm.js  ClientPage.js  CustomButton.css  Dashboard.js  ImageUploader.js
src/: App.js  database_manager.cpp  http_server.cpp  index.js  styles.css
src/components/: Auth.js  ClientForm.js  ClientPage.js  CustomButton.js  Dashboard.js  ImageGallery.js
